--- a/bikeBros/src/app/pages/main/profile/profile.page.html
+++ b/bikeBros/src/app/pages/main/profile/profile.page.html
@@ -31,7 +31,7 @@
     <ion-item-divider></ion-item-divider>
   </ion-card>
 
-  <app-route-list></app-route-list>
+  <!-- <app-route-list></app-route-list> -->
 
   <!-- <ion-card>
     <ion-item>
