--- a/bikeBros/src/app/components/event-list/event-list.component.html
+++ b/bikeBros/src/app/components/event-list/event-list.component.html
@@ -1,10 +1,6 @@
-<p class="center">Rutas favoritas</p>
+<p class="center">Eventos disponibles</p>
 
 <ion-card *ngFor="let event of events$ | async">
-  <!-- <img
-    *ngIf="event.ruta.imageURL; else defaultImage"
-    src="{{ event.ruta.imageURL }}"
-  /> -->
   <ng-template #defaultImage>
     <img src="https://ionicframework.com/docs/img/demos/card-media.png" />
   </ng-template>
@@ -30,5 +26,3 @@
     <ion-button (click)="printId()">Inscribirme</ion-button>
   </ion-card-content>
 </ion-card>
-
-<div></div>
