--- a/bikeBros/src/app/pages/main/profile-options/profile-options.page.html
+++ b/bikeBros/src/app/pages/main/profile-options/profile-options.page.html
@@ -1,48 +1,51 @@
-
-
-<!-- <ion-content>
-  <ion-card>
-    <ion-item>
-      <ion-button expand="full" (click)="editProfile()">Editar perfil</ion-button>
-    <ion-button (click)="confirmDelete()" color="danger" expand="full">Borrar perfil</ion-button>
-    </ion-item>
-  </ion-card>
-</ion-content> -->
-
-
-
-<ion-header>
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <!-- //Aqui al pulsar deberia redirigirnos a Inicio, no a inicio de registro -->
-      <ion-back-button defaultHref="main/profile" text="Atrás"></ion-back-button>
-    </ion-buttons>
-    <!-- <ion-title color="primary">Mi perfil</ion-title> -->
-  </ion-toolbar>
-</ion-header>
-<ion-content>
-<div class="card" *ngIf="profileUser">
-  <div class="header">
-    <div class="avatar">
-      <img *ngIf="profileUser.imageURL; else defaultImage" src="{{profileUser.imageURL}}">
-
+<ion-card *ngIf="profileUser">
+  <ion-header>
+    <ion-toolbar>
+      <ion-buttons slot="start">
+        <ion-back-button
+          defaultHref="main/profile"
+          text="Atrás"
+        ></ion-back-button>
+      </ion-buttons>
+    </ion-toolbar>
+  </ion-header>
+  <ion-card-content>
+    <ion-item lines="none">
+      <ion-avatar slot="end">
+        <img
+          *ngIf="profileUser.imageURL; else defaultImage"
+          [src]="profileUser.imageURL"
+        />
         <ng-template #defaultImage>
-          <img src="../../../assets/icon/user (1).png">
+          <img src="../../../assets/icon/user (1).png" />
         </ng-template>
-    </div>
-  </div>
-</div>
-
-<div class="card-body" *ngIf="profileUser">
-  <div class="user-meta ion-text-center">
-    <h3 class="playername">{{profileUser.nick}}</h3>
-    <h5 class="country">{{profileUser.email}}</h5>
-    <h6 class="ranking">{{profileUser.age}}<ion-chip>
-      <ion-label>2</ion-label>
-      </ion-chip>
-    </h6>
-  </div>
-  <ion-button expand="full" color="primary" (click)="editProfile()">Editar perfiles</ion-button>
-  <ion-button expand="full" color="danger" (click)="confirmDelete()">Eliminar cuenta</ion-button>
-</div>
-</ion-content>
+      </ion-avatar>
+    </ion-item>
+    <ion-item>
+      <ion-label>Usuario:</ion-label>
+      <ion-text>{{ profileUser.nick }}</ion-text>
+    </ion-item>
+    <ion-item>
+      <ion-label>Email:</ion-label>
+      <ion-text>{{ profileUser.email }}</ion-text>
+    </ion-item>
+    <ion-item>
+      <ion-label>Edad:</ion-label>
+      <ion-text>{{ profileUser.age }}</ion-text>
+    </ion-item>
+    <ion-item>
+      <ion-label>Descripción:</ion-label>
+      <ion-text>{{ profileUser.description }}</ion-text>
+    </ion-item>
+    <ion-item>
+      <ion-label>Roles:</ion-label>
+      <ion-text>{{ profileUser.roles.join(', ') }}</ion-text>
+    </ion-item>
+  </ion-card-content>
+  <ion-button expand="full" color="primary" (click)="editProfile()"
+    >Editar perfiles</ion-button
+  >
+  <ion-button expand="full" color="danger" (click)="confirmDelete()"
+    >Eliminar cuenta</ion-button
+  >
+</ion-card>
