Añadida validación a la hora de borrar eventos y rutas

--- a/bikeBros/src/app/components/event-list/event-list.component.html
+++ b/bikeBros/src/app/components/event-list/event-list.component.html
@@ -13,7 +13,7 @@
   <ion-card-content>
     <ion-card-subtitle>Fecha del evento: {{ event.fecha }}</ion-card-subtitle>
     <ion-card-subtitle
-      >Numero de participantes: {{ event.participantes.length }}/{{
+      >Numero de participantes: {{ event.participantes?.length }}/{{
         event.maxParticipantes
       }}</ion-card-subtitle
     >
@@ -24,5 +24,6 @@
       >Ver evento</ion-button
     >
     <ion-button (click)="printId()">Inscribirme</ion-button>
+    <ion-button (click)="deleteEvent(event._id)">Borrar</ion-button>
   </ion-card-content>
 </ion-card>
