--- a/bikeBros/src/app/components/route-list/route-list.component.html
+++ b/bikeBros/src/app/components/route-list/route-list.component.html
@@ -55,6 +55,7 @@
       >Ver</ion-button
     >
     <ion-button (click)="deleteRoute(ruta._id)">Delete route</ion-button>
+    <ion-button (click)="showId()">Show id</ion-button>
   </ion-card-content>
 </ion-card>
 
