--- a/bikeBros/src/app/pages/main/create-route/create-route.page.html
+++ b/bikeBros/src/app/pages/main/create-route/create-route.page.html
@@ -15,6 +15,7 @@
     </div>
     <div *ngIf="selectedPage === 'eventos'">
       <!-- Contenido de la página de eventos -->
+      <ion-button (click)="showEventRegisterModal()">Crear Evento</ion-button>
       <app-event-list></app-event-list>
     </div>
   </ion-content>
