Controlado la visualización o no del boton eliminar ruta.

--- a/bikeBros/src/app/pages/main/create-route/create-route.page.html
+++ b/bikeBros/src/app/pages/main/create-route/create-route.page.html
@@ -5,6 +5,7 @@
       <ion-segment-button value="eventos"> Eventos </ion-segment-button>
     </ion-segment>
   </ion-toolbar>
+  <app-input-comment></app-input-comment>
 </ion-header>
 <ion-content>
   <ion-content>
