--- a/bikeBros/src/app/components/route-list/route-list.component.html
+++ b/bikeBros/src/app/components/route-list/route-list.component.html
@@ -54,7 +54,12 @@
     <ion-button (click)="setIdRoute(ruta._id)" (click)="checkRoute(ruta._id)"
       >Ver</ion-button
     >
-    <ion-button (click)="deleteRoute(ruta._id)">Delete route</ion-button>
+
+    <ion-button
+      *ngIf="ruta.author == profileUser.id || roles.includes('ROLE_ADMIN')"
+      (click)="deleteRoute(ruta._id)"
+      >Delete route</ion-button
+    >
     <ion-button (click)="showId()">Show id</ion-button>
   </ion-card-content>
 </ion-card>
