--- a/bikeBros/src/app/components/input-comment/input-comment.component.html
+++ b/bikeBros/src/app/components/input-comment/input-comment.component.html
@@ -1,11 +1,12 @@
-<form>
+<form [formGroup]="commentForm">
   <ion-item>
     <ion-label position="floating">Escribe tu comentario...</ion-label>
     <ion-input
+      formControlName="comment"
       type="text"
       v-model="comment"
       placeholder="Escribe tu comentario..."
     ></ion-input>
   </ion-item>
-  <ion-button expand="full">Enviar</ion-button>
+  <ion-button expand="full" (click)="onSubmit()">Enviar</ion-button>
 </form>
