--- a/bikeBros/src/app/components/event-list/event-list.component.html
+++ b/bikeBros/src/app/components/event-list/event-list.component.html
@@ -1,5 +1,3 @@
-<p class="center">Eventos disponibles</p>
-
 <ion-card *ngFor="let event of events$ | async">
   <ng-template #defaultImage>
     <img src="https://ionicframework.com/docs/img/demos/card-media.png" />
@@ -23,6 +21,10 @@
     <ion-button (click)="setIdEvent(event._id)" (click)="checkEvent(event._id)"
       >Ver evento</ion-button
     >
-    <ion-button (click)="deleteEvent(event._id)">Borrar</ion-button>
+    <ion-button
+      *ngIf="event.creator == currentUser?.id || roles?.includes('ROLE_ADMIN')"
+      (click)="deleteEvent(event._id)"
+      >Borrar Evento</ion-button
+    >
   </ion-card-content>
 </ion-card>
