--- a/bikeBros/src/app/components/route-list/route-list.component.scss
+++ b/bikeBros/src/app/components/route-list/route-list.component.scss
@@ -47,3 +47,19 @@
   font-size: x-large;
   // border: 1px solid red;
 }
+
+.image-container {
+  width: 100%;
+  padding-bottom: 75%; /* Establece una proporción de 4:3 para las imágenes */
+  position: relative;
+  overflow: hidden;
+}
+
+.img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* Ajusta la imagen al contenedor sin deformarla */
+}
