--- a/bikeBros/src/app/components/route-list/route-list.component.html
+++ b/bikeBros/src/app/components/route-list/route-list.component.html
@@ -4,7 +4,7 @@
       <div class="image-container">
         <img
           class="img"
-          src="{{ 'http://localhost:3300/uploads/' + imageURL }}"
+          src="{{ 'https://bikebrosv2.herokuapp.com/uploads/' + imageURL }}"
         />
       </div>
     </ion-slide>
