--- a/bikeBros/src/app/components/register-event-modal/register-event-modal.component.html
+++ b/bikeBros/src/app/components/register-event-modal/register-event-modal.component.html
@@ -34,7 +34,10 @@
       >
       </ion-datetime>
     </ion-item>
-
+    <ion-item>
+      <ion-label position="floating">Ubicación</ion-label>
+      <ion-input formControlName="ubicacion" type="text" required></ion-input>
+    </ion-item>
     <ion-item>
       <ion-label position="floating">Máximo de participantes</ion-label>
       <ion-input
