--- a/bikeBros/src/app/pages/main/profile/profile.page.html
+++ b/bikeBros/src/app/pages/main/profile/profile.page.html
@@ -27,9 +27,9 @@
         <ion-card-subtitle></ion-card-subtitle>
       </ion-label>
     </ion-item>
-
     <ion-item-divider></ion-item-divider>
   </ion-card>
+  <app-fav-list></app-fav-list>
 
   <!-- <app-route-list></app-route-list> -->
 
