Cambios en el registro de usuario (imagen)

--- a/bikeBros/src/app/components/fav-list/fav-list.component.html
+++ b/bikeBros/src/app/components/fav-list/fav-list.component.html
@@ -2,10 +2,7 @@
   <ion-slides>
     <ion-slide *ngFor="let imageURL of ruta.images">
       <div class="image-container">
-        <img
-          class="img"
-          src="{{ 'http://localhost:3300/uploads/' + imageURL }}"
-        />
+        <img class="img" src="{{ imageURL }}" />
       </div>
     </ion-slide>
   </ion-slides>
