--- a/bikeBros/src/app/pages/main/profile/profile.page.html
+++ b/bikeBros/src/app/pages/main/profile/profile.page.html
@@ -29,6 +29,7 @@
     </ion-item>
     <ion-item-divider></ion-item-divider>
   </ion-card>
+  <ion-title>Rutas Favoritas</ion-title>
   <app-fav-list></app-fav-list>
 
   <!-- <app-route-list></app-route-list> -->
