añadidas suscripciones a los componentes para refrescar información.

--- a/bikeBros/src/app/components/event-list/event-list.component.html
+++ b/bikeBros/src/app/components/event-list/event-list.component.html
@@ -8,7 +8,7 @@
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
-<ion-card *ngFor="let event of events$ | async">
+<ion-card *ngFor="let event of events">
   <ng-template #defaultImage>
     <img src="https://ionicframework.com/docs/img/demos/card-media.png" />
   </ng-template>
