se actualiza el componente de forma correcta

--- a/bikeBros/src/app/components/fav-list/fav-list.component.html
+++ b/bikeBros/src/app/components/fav-list/fav-list.component.html
@@ -1,4 +1,4 @@
-<ion-card *ngFor="let ruta of routes$ | async">
+<ion-card *ngFor="let ruta of favs">
   <ion-slides>
     <ion-slide *ngFor="let imageURL of ruta.images">
       <div class="image-container">
