rutas tanto eliminacion como creación mejoradas con css

--- a/bikeBros/src/app/pages/deleted-event/deleted-event.page.html
+++ b/bikeBros/src/app/pages/deleted-event/deleted-event.page.html
@@ -7,11 +7,10 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-  <div class="mensaje-informativo">
-    <ion-icon name="checkmark-circle"></ion-icon>
-    <span>Evento eliminado exitosamente</span>
-  </div>
+<ion-content class="mensaje-informativo">
+  <ion-icon name="checkmark-circle"></ion-icon>
+  <p>Evento eliminado exitosamente</p>
+
   <ion-button class="boton-continuar" (click)="continue()"
     >Continuar</ion-button
   >
