--- a/bikeBros/src/app/pages/deleted-route/deleted-route.page.html
+++ b/bikeBros/src/app/pages/deleted-route/deleted-route.page.html
@@ -7,11 +7,9 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-  <div class="mensaje-informativo">
-    <ion-icon name="checkmark-circle"></ion-icon>
-    <span>Ruta eliminada exitosamente</span>
-  </div>
+<ion-content class="mensaje-informativo">
+  <ion-icon name="checkmark-circle"></ion-icon>
+  <p>Ruta eliminada exitosamente</p>
   <ion-button class="boton-continuar" (click)="continue()"
     >Continuar</ion-button
   >
