cambios en las vistas tras crear eliminar rutas eventos

--- a/bikeBros/src/app/pages/success-route/success-route.page.html
+++ b/bikeBros/src/app/pages/success-route/success-route.page.html
@@ -7,11 +7,10 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-  <div class="mensaje-informativo">
-    <ion-icon name="checkmark-circle"></ion-icon>
-    <span>Ruta creada exitosamente</span>
-  </div>
+<ion-content class="mensaje-informativo">
+  <ion-icon name="checkmark-circle"></ion-icon>
+  <p>Ruta creada exitosamente</p>
+
   <ion-button class="boton-continuar" (click)="continue()"
     >Continuar</ion-button
   >
