--- a/bikeBros/src/app/pages/deleted-event/deleted-event.page.scss
+++ b/bikeBros/src/app/pages/deleted-event/deleted-event.page.scss
@@ -7,7 +7,7 @@
   color: red;
   text-align: center;
   margin-bottom: 20px;
-  border: 1px solid rebeccapurple;
+  // border: 1px solid rebeccapurple;
   height: 200px;
 }
 
