--- a/bikeBros/src/app/pages/success-event/success-event.page.scss
+++ b/bikeBros/src/app/pages/success-event/success-event.page.scss
@@ -1,16 +1,20 @@
 .mensaje-informativo {
   display: flex;
-  align-items: center;
+  align-items: end;
   justify-content: center;
   font-size: 24px;
   font-weight: bold;
   color: green;
+  text-align: center;
   margin-bottom: 20px;
+  // border: 1px solid rebeccapurple;
+  height: 200px;
 }
 
 .mensaje-informativo ion-icon {
   font-size: 48px;
   margin-right: 10px;
+  padding-top: 150px;
 }
 
 .boton-continuar {
