--- a/bikeBros/src/app/components/event-list/event-list.component.html
+++ b/bikeBros/src/app/components/event-list/event-list.component.html
@@ -15,7 +15,7 @@
 
   <ion-card-header>
     <ion-card-title *ngIf="event.ruta"
-      >Localidad: {{ event.ruta.location }}
+      >Punto de partida: {{ event.ubicacion }}
     </ion-card-title>
   </ion-card-header>
   <ion-card-content>
