--- a/bikeBros/src/app/components/route-list/route-list.component.html
+++ b/bikeBros/src/app/components/route-list/route-list.component.html
@@ -1,6 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-searchbar
+      animated="true"
       placeholder="Buscar rutas..."
       [(ngModel)]="searchTerm"
     ></ion-searchbar>
