--- a/bikeBros/src/app/pages/main/main.page.html
+++ b/bikeBros/src/app/pages/main/main.page.html
@@ -1,14 +1,14 @@
 <ion-content>
   <ion-tabs>
     <ion-tab-bar slot="bottom">
-      <ion-tab-button tab="news">
-        <ion-icon name="newspaper"></ion-icon>
+      <ion-tab-button tab="weather">
+        <ion-icon name="sunny"></ion-icon>
       </ion-tab-button>
       <ion-tab-button tab="create-route">
-        <ion-icon name="home"></ion-icon>
+        <ion-icon name="bicycle"></ion-icon>
       </ion-tab-button>
       <ion-tab-button tab="profile">
-        <ion-icon name="pie-chart"></ion-icon>
+        <ion-icon name="person-circle"></ion-icon>
       </ion-tab-button>
     </ion-tab-bar>
   </ion-tabs>
