--- a/bikeBros/src/app/pages/main/profile/profile.page.scss
+++ b/bikeBros/src/app/pages/main/profile/profile.page.scss
@@ -1,14 +1,7 @@
-.header-toolbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  
-  .header-title {
-    flex: 1;
-    text-align: center;
-  }
-  
-  .header-avatar {
-    width: 15%;
-  }
+.title {
+  text-align: center;
+  // text-transform: uppercase;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  border-bottom: 1px solid white;
+}
